--- a/styles.css
+++ b/styles.css
@@ -5,7 +5,7 @@ body, html {
 }
 
 .page-wrapper {
-    width: 100%;
+    width: 90%;
     margin: 0 auto;
 }
 
@@ -47,20 +47,6 @@ body, html {
     font-size: 1.5em;
 }
 
-.fixed-part .image {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 50%; /* Adjust as needed */
-    margin-top: auto; /* Push the image to the bottom */
-}
-
-.fixed-part .image img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-}
-
 .scroll-content {
     display: flex;
     height: 100%;
@@ -90,22 +76,7 @@ body, html {
     text-align: left;
 }
 
-.scrolling-part .image {
-    width: 50%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding-right: 10%;
-    height: 50%;
-}
-
-.scrolling-part .image img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-}
-
-.scrolling-part .canvas-container {
+.scrolling-part .media {
     width: 50%;
     display: flex;
     justify-content: center;
@@ -113,7 +84,20 @@ body, html {
     height: 100%;
 }
 
-.scrolling-part .canvas-container canvas {
+.scrolling-part .media img {
+    height: 50%;
+    object-fit: cover;
+}
+
+.scrolling-part .media .generic-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.scrolling-part .media canvas {
     width: 100%;
     height: 100%;
 }
