--- a/styles.css
+++ b/styles.css
@@ -15,6 +15,7 @@ body, html {
     display: flex;
     justify-content: center;
     align-items: center;
+    margin-bottom: 10px;
 }
 
 .scroll-section {
