--- a/styles.css
+++ b/styles.css
@@ -33,8 +33,8 @@ body, html {
 
 .fixed-part {
     position: absolute;
-    top: 10px; /* Adjust as needed */
-    left: 10px; /* Adjust as needed */
+    top: 20px; /* Adjust as needed */
+    left: 30px; /* Adjust as needed */
     background-color: transparent; /* Remove background */
     z-index: 1; /* Ensure it stays on top */
 }
@@ -46,6 +46,9 @@ body, html {
 
 .fixed-part .subtitle {
     font-size: 1.5em;
+    margin-left: 10px;
+    margin-left: 10px;
+    left: 30px;
 }
 
 .scroll-content {
@@ -64,7 +67,7 @@ body, html {
     flex-direction: row; /* Ensure horizontal layout */
     height: 100%;
     width: 100vw; /* Each part takes full viewport width */
-    background-color: #ccc; /* Background color for each part */
+    background-color: #ffffff; /* Background color for each part */
     justify-content: center;
     align-items: center;
 }
@@ -83,6 +86,7 @@ body, html {
     box-sizing: border-box;
     font-size: 1.2em;
     text-align: left;
+    margin: 30px;
 }
 
 .right-content {
@@ -91,7 +95,7 @@ body, html {
 
 .scrolling-part .media img {
     justify-content: center;
-    width: 50%; /* Image width 100% of its container */
+    width: 90%; /* Image width 50% of its container */
     height: auto; /* Maintain aspect ratio */
     object-fit: cover;
     display: block;
@@ -106,12 +110,21 @@ body, html {
     align-items: center;
 }
 
-.scrolling-part .media canvas {
+.scrolling-part .media .babylon-canvas canvas {
     width: auto; /* Width 100% of the container */
     height: 380px; /* Full height of the container */
     aspect-ratio: 1.4;
     display: block;
     margin: auto;
+    background-color: transparent; /* Remove background color if any */
+}   
+
+.scrolling-part .media .chartjs-canvas canvas{
+    width :100%;
+    height: auto;
+    display: block;
+    margin: auto;
+    padding-right: 5%;
     background-color: transparent; /* Remove background color if any */
 }
 
@@ -133,25 +146,39 @@ body, html {
     }
     .scrolling-part {
         flex-direction: column; /* Stack left and right content vertically */
-    }
-    .scrolling-part .media img {
-        height: 60%; /* Image height 60% of container */
-        width: auto; /* Adjust width automatically */
+        height: 100%; /* Ensure they take full height of the scroll-section */
     }
     .left-content, .right-content {
         width: 100%;
         height: 50%; /* Each takes half the height */
     }
+    .scrolling-part .right-content .media img {
+        padding-top: 0%;
+        width: 90%; /* Maintain aspect ratio */
+        object-fit: cover; /* Optional: maintain aspect ratio and cover the container */
+        display: block;
+        margin: auto;
+    }
     .scrolling-part .media .generic-content {
         width: 100%; /* Full width on mobile */
         height: auto; /* Adjust height automatically */
     }
-    .scrolling-part .media canvas {
+    .scrolling-part .media .babylon-canvas canvas {
         width: auto; /* Width 100% of the container */
         height: 280px; /* Full height of the container */
-        aspect-ratio: 1.2;
+        aspect-ratio: 1.6;
         display: block;
         margin: auto;
         background-color: transparent; /* Remove background color if any */
+    }   
+    
+
+    .left-content .text {
+        width: 100%;
+        padding-left: 0px;
+        margin: 50px;
+        box-sizing: border-box;
+        font-size: 1.2em;
+        text-align: center;
     }
 }
