--- a/styles.css
+++ b/styles.css
@@ -137,9 +137,13 @@ body, html {
         justify-content: center;
         align-items: center;
     }
+
+
     .scroll-section {
-        height: 600px; /* Adjust the height for mobile */
+        height: 750px; /* Adjust the height for mobile */
     }
+
+
     .scroll-content {
         width: 300vw; /* Maintain horizontal scroll content */
         flex-direction: row; /* Maintain horizontal layout */
@@ -152,6 +156,28 @@ body, html {
         width: 100%;
         height: 50%; /* Each takes half the height */
     }
+
+    .fixed-part .title {
+        font-size: 1.4em;
+        font-weight: bold;
+    }
+    
+    .fixed-part .subtitle {
+        font-size: 1.2em;
+        margin-left: 10px;
+        margin-left: 10px;
+        left: 30px;
+    }
+
+    .left-content .text {
+        width: 100%;
+        padding-left: 0px;
+        margin: 50px;
+        box-sizing: border-box;
+        font-size: 1em;
+        text-align: center;
+    }
+
     .scrolling-part .right-content .media img {
         padding-top: 0%;
         width: 90%; /* Maintain aspect ratio */
@@ -171,14 +197,6 @@ body, html {
         margin: auto;
         background-color: transparent; /* Remove background color if any */
     }   
-    
 
-    .left-content .text {
-        width: 100%;
-        padding-left: 0px;
-        margin: 50px;
-        box-sizing: border-box;
-        font-size: 1.2em;
-        text-align: center;
-    }
+
 }
