--- a/styles.css
+++ b/styles.css
@@ -67,9 +67,24 @@ body, html {
     flex-direction: row; /* Ensure horizontal layout */
     height: 100%;
     width: 100vw; /* Each part takes full viewport width */
-    background-color: #ffffff; /* Background color for each part */
+    /* background-color: #ffffff;*/ /* Background color for each part */
+    background-color: transparent;;
     justify-content: center;
     align-items: center;
+}
+
+.scroll-content::before{
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-image: url('https://plus.unsplash.com/premium_photo-1674978723656-6b0ee188a014?q=80&w=1471&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D'); /* Replace with your image path */
+    background-size: cover;
+    background-position: center;
+    filter: blur(10px); /* Optional: Add blur effect */
+    z-index: -1; /* Ensure it stays behind the content */
 }
 
 .left-content, .right-content {
