--- a/styles.css
+++ b/styles.css
@@ -174,6 +174,11 @@ body, html {
         height: 50%; /* Each takes half the height */
     }
 
+    .fixed-part {
+        left: 10px; 
+        top: 5px;
+    }
+
     .fixed-part .title {
         font-size: 1.4em;
         font-weight: bold;
@@ -182,8 +187,7 @@ body, html {
     .fixed-part .subtitle {
         font-size: 1.2em;
         margin-left: 10px;
-        margin-left: 10px;
-        left: 30px;
+        margin-top: 5px;
     }
 
     .left-content .text {
@@ -207,7 +211,7 @@ body, html {
         height: auto; /* Adjust height automatically */
     }
     .scrolling-part .media .babylon-canvas canvas {
-        width: auto; /* Width 100% of the container */
+        width: 100%; /* Width 100% of the container */
         height: 280px; /* Full height of the container */
         aspect-ratio: 1.6;
         display: block;
