--- a/styles.css
+++ b/styles.css
@@ -274,3 +274,17 @@ body, html {
     background-color: #717171;
     z-index: 12; /* Active dot on top of others */
 }
+
+#main-section-svg svg {
+    width: 100%;
+    height: auto;
+}
+
+#main-section-svg svg .some-class {
+    fill: red;
+    transition: fill 0.3s ease-in-out;
+}
+
+#main-section-svg svg .some-class:hover {
+    fill: blue;
+}
