--- a/styles.css
+++ b/styles.css
@@ -294,6 +294,7 @@ body, html {
 
 #main-section-svg svg .ellipse {
     transition: fill 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 #main-section-svg svg .ellipse:hover {
@@ -302,5 +303,22 @@ body, html {
 
 #main-section-svg svg .formula:hover path{
     fill: #ff0000;
+}
 
+#journal-container {
+    position: absolute;
+    width: 300px;
+    height: 400px;
+    perspective: 1000px; /* To create a 3D effect */
+    cursor: pointer;
+    opacity: 0; /* Start invisible for the animation */
+    display: none; /* Initially hidden */
+}
+
+#journal-image {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    transform: rotateY(-90deg); /* Start with a rotated view */
+    transition: transform 0.8s ease-in-out;
 }
