--- a/styles.css
+++ b/styles.css
@@ -312,7 +312,7 @@ body, html {
     transform: translate(50%, -50%);
     width: 200px;
     height: 300px;
-    background-image: url('https://images.unsplash.com/photo-1579127586892-3c877fd5a1cf?crop=entropy&cs=tinysrgb&fit=max&fm=jpg&ixid=MnwxMTc3M3wwfDF8c2VhcmNofDJ8fGpvYXJuYWx8ZW58MHx8fHwxNjEyNzk0OTg0&ixlib=rb-1.2.1&q=80&w=400');
+    background-image: url('https://via.placeholder.com/200x300.png?text=Journal+Cover');
     background-size: cover;
     background-position: center;
     box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.3); /* Initial shadow */
