--- a/styles.css
+++ b/styles.css
@@ -10,7 +10,8 @@ body, html {
 }
 
 .main-section {
-    height: 800px;
+    padding-top: 10px;
+    padding-bottom: 10px;
     background-color: #f0f0f0;
     display: flex;
     justify-content: center;
