--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@ body, html {
     margin: 0;
     padding: 0;
     overflow-x: hidden;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Figtree', sans-serif;
 }
 
 .page-wrapper {
