--- a/styles.css
+++ b/styles.css
@@ -311,8 +311,8 @@ body, html {
 #journal-container {
     position: absolute;
     top: 50%;
-    right: 50%;
-    transform: translate(50%, -50%);
+    right: 25%;
+    /*transform: translate(50%, -50%);*/
     width: 200px;
     height: 300px;
     background-image: url('https://via.placeholder.com/200x300.png?text=Journal+Cover');
