--- a/styles.css
+++ b/styles.css
@@ -312,8 +312,8 @@ body, html {
 #journal-container {
     position: relative;
     /*top: 50%;*/
-    left: 50%;
-    transform: translate(50%, -50%);
+    left: -10%;
+    /*transform: translate(50%, -50%);*/
     width: 200px;
     height: 300px;
     background-image: url('https://via.placeholder.com/200x300.png?text=Journal+Cover');
