--- a/styles.css
+++ b/styles.css
@@ -197,7 +197,7 @@ body, html {
     .left-content .text {
         width: 100%;
         padding-left: 0px;
-        margin-top: 50px;
+        margin: 50px;
         box-sizing: border-box;
         font-size: 1em;
         text-align: center;
