--- a/styles.css
+++ b/styles.css
@@ -331,6 +331,7 @@ body, html {
 #journal-image {
     width: 100%;
     height: 100%;
+    border-radius: 10px;
     object-fit: cover;
     transform: rotateY(-90deg); /* Start with a rotated view */
     transition: transform 0.8s ease-in-out;
