--- a/styles.css
+++ b/styles.css
@@ -48,8 +48,7 @@ body, html {
 
 .fixed-part .subtitle {
     font-size: 1.5em;
-    margin-left: 10px;
-    margin-left: 10px;
+    margin-top: 10px;
     left: 30px;
 }
 
@@ -96,7 +95,6 @@ body, html {
 
 .left-content .text {
     width: 100%;
-    padding-left: 20px;
     box-sizing: border-box;
     font-size: 1.2em;
     text-align: left;
