--- a/styles.css
+++ b/styles.css
@@ -198,7 +198,7 @@ body, html {
         margin: 50px;
         box-sizing: border-box;
         font-size: 1em;
-        text-align: center;
+        text-align: left;
     }
 
     .scrolling-part .right-content .media img {
@@ -242,7 +242,7 @@ body, html {
         margin: 50px;
         box-sizing: border-box;
         font-size: 4vw;
-        text-align: center;
+        text-align: left;
     }
 
 }
@@ -337,7 +337,7 @@ body, html {
 
 
 .main-text {
-    font-size: 1.3em;
+    font-size: 1em;
     font-weight: normal;
     padding-top: 10px;
     padding-bottom: 20px;
