--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body, html {
 .main-section {
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: #f0f0f0;
+    background-color: #ffffff;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -306,6 +306,8 @@ body, html {
 #main-section-svg svg .formula:hover path{
     fill: #ff0000;
 }
+
+
 
 #journal-container {
     position: absolute;
