--- a/styles.css
+++ b/styles.css
@@ -127,24 +127,10 @@ html {
     flex-direction: column;
 }
 
-.scrolling-part .media img {
-    justify-content: center;
-    width: 90%;
-    /* Image width 50% of its container */
-    height: auto;
-    /* Maintain aspect ratio */
-    object-fit: cover;
-    display: block;
-    margin: auto;
-    position: relative;
-    /* Ensure it's positioned to allow z-index to take effect */
-    z-index: 5;
-    /* Adjust this value to ensure it is above other elements */
-}
-
 .media {
     pointer-events: auto;
     z-index: 10;
+    height :100%;
 }
 
 .scrolling-part .media .generic-content {
@@ -452,6 +438,7 @@ html {
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin-left: 30px;
 }
 
 
@@ -473,13 +460,6 @@ html {
     transform: rotate(180deg);
 }
 
-.toggable-section .header{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-
-    margin-left: 30px;
-}
 
 .header .title {
     font-size: 1.8em;
@@ -494,4 +474,32 @@ html {
 
 .toggable-section-content .scrolling-part{
     height: 400px;
+}
+
+.scrolling-part .media .chartjs-canvas canvas {
+    width: 100%;
+    height: 300px;
+    position: relative;
+    display: block;
+    margin: auto;
+    padding-right: 5%;
+    background-color: transparent;
+    /* Remove background color if any */
+}
+
+
+
+.scrolling-part .media img {
+    justify-content: center;
+    height: auto;
+    /* Image width 50% of its container */
+    width : 50%;
+    /* Maintain aspect ratio */
+    object-fit: cover;
+    display: block;
+    margin: auto;
+    position: relative;
+    /* Ensure it's positioned to allow z-index to take effect */
+    z-index: 5;
+    /* Adjust this value to ensure it is above other elements */
 }
