--- a/styles.css
+++ b/styles.css
@@ -118,7 +118,7 @@ html {
 .left-content .text {
     width: 100%;
     box-sizing: border-box;
-    font-size: 1em;
+    font-size: 1.2em;
     text-align: left;
     margin: 30px;
 }
@@ -191,75 +191,7 @@ html {
         /* Maintain horizontal layout */
     }
 
-    .scrolling-part {
-        flex-direction: column;
-        /* Stack left and right content vertically */
-        height: 100%;
-        /* Ensure they take full height of the scroll-section */
-    }
 
-    .left-content,
-    .right-content {
-        width: 100%;
-        height: 50%;
-        /* Each takes half the height */
-    }
-
-    .fixed-part {
-        left: 10px;
-        top: 5px;
-    }
-
-    .fixed-part .title {
-        font-size: 1.4em;
-        font-weight: bold;
-    }
-
-    .fixed-part .subtitle {
-        font-size: 1.2em;
-        /*margin-left: 10px;*/
-        margin-top: 5px;
-    }
-
-    .left-content .text {
-        width: 100%;
-        padding-left: 0px;
-        margin: 10px;
-        box-sizing: border-box;
-        font-size: 1em;
-        text-align: left;
-        margin-top: 50px;
-        margin-bottom: 80px;
-    }
-
-    .scrolling-part .right-content .media img {
-        padding-top: 0%;
-        width: 90%;
-        /* Maintain aspect ratio */
-        object-fit: cover;
-        /* Optional: maintain aspect ratio and cover the container */
-        display: block;
-        margin: auto;
-    }
-
-    .scrolling-part .media .generic-content {
-        width: 100%;
-        /* Full width on mobile */
-        height: auto;
-        /* Adjust height automatically */
-    }
-
-    .scrolling-part .media .babylon-canvas canvas {
-        width: 100%;
-        /* Width 100% of the container */
-        height: 280px;
-        /* Full height of the container */
-        aspect-ratio: 1.6;
-        display: block;
-        margin: auto;
-        background-color: transparent;
-        /* Remove background color if any */
-    }
 }
 
 /* Resize text for very small screens */
@@ -473,12 +405,19 @@ html {
 }
 
 .toggable-section-content .scrolling-part{
-    height: 400px;
+    height:380px;
+    /*height: auto;
+    max-height: 380px;*/
+}
+
+.toggable-section-content .scrolling-part .media{
+    display: flex;
+    align-items: center;
 }
 
 .scrolling-part .media .chartjs-canvas canvas {
     width: 100%;
-    height: 300px;
+    height: 350px;
     position: relative;
     display: block;
     margin: auto;
@@ -493,13 +432,88 @@ html {
     justify-content: center;
     height: auto;
     /* Image width 50% of its container */
-    width : 50%;
+    width : 90%;
+    max-height: 380px;
     /* Maintain aspect ratio */
-    object-fit: cover;
+    object-fit: contain;
     display: block;
     margin: auto;
     position: relative;
     /* Ensure it's positioned to allow z-index to take effect */
     z-index: 5;
     /* Adjust this value to ensure it is above other elements */
+}
+
+
+@media (max-width: 768px) {
+
+    .toggable-section-content  .scrolling-part {
+        flex-direction: column;
+        /* Stack left and right content vertically */
+        height: 100%;
+        /* Ensure they take full height of the scroll-section */
+    }
+
+    .left-content,
+    .right-content {
+        width: 100%;
+        height: 50%;
+        /* Each takes half the height */
+    }
+
+    .fixed-part {
+        left: 10px;
+        top: 5px;
+    }
+
+    .fixed-part .title {
+        font-size: 1.4em;
+        font-weight: bold;
+    }
+
+    .fixed-part .subtitle {
+        font-size: 1.2em;
+        /*margin-left: 10px;*/
+        margin-top: 5px;
+    }
+
+    .left-content .text {
+        width: 100%;
+        padding-left: 0px;
+        margin: 10px;
+        box-sizing: border-box;
+        font-size: 1em;
+        text-align: left;
+        margin-top: 50px;
+        margin-bottom: 80px;
+    }
+
+    .scrolling-part .right-content .media img {
+        padding-top: 0%;
+        width: 90%;
+        /* Maintain aspect ratio */
+        object-fit: contain;
+        /* Optional: maintain aspect ratio and cover the container */
+        display: block;
+        margin: auto;
+    }
+
+    .scrolling-part .media .generic-content {
+        width: 100%;
+        /* Full width on mobile */
+        height: auto;
+        /* Adjust height automatically */
+    }
+
+    .scrolling-part .media .babylon-canvas canvas {
+        width: 100%;
+        /* Width 100% of the container */
+        height: 280px;
+        /* Full height of the container */
+        aspect-ratio: 1.6;
+        display: block;
+        margin: auto;
+        background-color: transparent;
+        /* Remove background color if any */
+    }
 }
